<resources>
    <string name="app_name">PrixPasCher</string>
    <string name="download_label">Download</string>
    <string name="remove_label">Remove</string>
    <string name="bookmark_label">Bookmark</string>
    <string name="un_bookmark_label">Unbookmark</string>
    <string name="channel_label">Channel</string>
    <string name="feed_label">Feed</string>
    <string name="share_label">Partager</string>
    <string name="content_descripton_logo_splash">prixpascher</string>
    <string name="folder_save_photo">prixpascher</string>
    <string name="send_enquiry">Alerte mail / prix</string>
    <string name="your_message">Votre message</string>
    <string name="your_info">Infos complémentaire pour dévis (Nom Société, Adresse postale, ...)</string>
    <string name="your_email">Votre email</string>
    <string name="your_phone">Votre N° de téléphone</string>
    <string name="your_price">Prix cible</string>
    <string name="offer_price">Prix / Offre (TTC)</string>
    <string name="your_qty">Qté</string>
    <string name="offer_promo">Code Promo spécial</string>
    <string name="offer_msg">Infos utiles pour le client (Délais de livraison, adresse,...)</string>
    <string name="offer_qty">Qté disponible</string>
    <string name="this_user_not_share_phone_number">This users not share phone number</string>
    <string name="cannot_rating_for_yourself">You can not rating for your self</string>
    <string name="rate_this_product">Evaluer cet article</string>
    <string name="ok_label">OK</string>
    <string name="apply_label">Appliquer</string>
    <string name="cancel_label">Annuler</string>
    <string name="del_label">Supprimer</string>
    <string name="dummy_text">...</string>
    <string name="comment_text">{faw-comment-o}</string>
    <string name="rate_it">Evaluer cet article</string>
    <string name="rating">Rating</string>
    <string name="download_ok">Download completion</string>
    <string name="download_failed">Download failed, file not found</string>
    <string name="open_network">Check your internet connection</string>
    <string name="http_call_error">Impossible de valider cette opération avec votre profile !</string>
    <string name="network_error">No internet connection, please check !</string>
    <string name="open_network_label">Please check your internet connection and try again...</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="download_cancel">Download cancel</string>
    <string name="please_wait_msg">Please wait...</string>
    <string name="upload_product_msg">Please wait, the upload may take 1-2 minutes</string>
    <string name="shop_label">Boutiques</string>
    <string name="categories_label">Catégories</string>
    <string name="announces_label">Annonces / Devis</string>
    <string name="store_label">On store</string>
    <string name="category_label">Catégorie</string>
    <string name="city_label">Ville</string>
    <string name="price_label">Prix</string>
    <string name="title_label">Titre</string>
    <string name="content_label">Content</string>
    <string name="upload_label">Submit your product</string>
    <string name="what_you_want">Joindre Photo/Scan</string>
    <string name="incorrect_info">Remplir tous les champs du formulaire!</string>
    <string name="incorrect_offer">Prix et Qté obligatoires !</string>
    <string name="type_message">Please type your message</string>
    <string name="alert">Alert</string>
    <string name="offer_alert">Votre offre sera autovalidée par PrixPasCher et visible directment et exclusivement par le client</string>
    <string name="aim_label">Purpose</string>
    <string name="confirm_take_photo">Please take an photo ?</string>
    <string name="recent_label">{faw-filter}</string>
    <string name="buy_label">{faw-arrow_down}</string>
    <string name="low_price_label">Prix en baisse !</string>
    <string name="promotions_label">Promotions</string>
    <string name="devis_label">Demandes d\'achat</string>
    <string name="offers_label">Offres sur devis</string>
    <string name="news_label">New !</string>
    <string name="all_label">{faw-refresh}</string>
    <string name="announce_sell_label">{faw-bullhorn}</string>
    <string name="announce_offer_label">{faw-handshake_o}</string>
    <string name="tap_to_change_avt">Changer votre avatar</string>
    <string name="follow_label">Suivre</string>
    <string name="products">Mes Produits</string>
    <string name="offers">Mes Offres</string>
    <string name="announces">Mes Annonces</string>
    <string name="similar_products">Produits Similaires</string>
    <string name="open_offers">Autres Offres</string>
    <string name="bookmarked_product">Mark Products</string>
    <string name="logout">{faw-sign_out}</string>
    <string name="close_label">Fermer</string>
    <string name="filter_label">Filtre</string>
    <string name="home_label">Accueil</string>
    <string name="profile_label">Profile</string>
    <string name="update_profile_label">Change your profile</string>
    <string name="choose_your_user_name">Choose your username</string>
    <string name="skip_label">Skip</string>
    <string name="addToCart">Acheter IcI</string>
    <string name="priceHistory">Evolution Prix</string>
    <string name="alert_mail">Je souhaite recevoir une alerte email sur toute baisse de prix de ce produit</string>
    <string name="devis_mail">Demande d\'achat sur devis</string>
    <string name="devis_offer_label">Vous vendez cet article, Envoyer votre offre</string>
    <string name="full_name">Nom complet</string>
    <string name="email">Login email</string>
    <string name="website">Site Web</string>
    <string name="phone">Tel</string>
    <string name="feed">Catalogue de produits</string>
    <string name="address">Adresse</string>
    <string name="update_label">Sauvegarder</string>
    <string name="edit_label">{faw-pencil}</string>
    <string name="comment_label">Avis</string>
    <string name="send">Envoyer</string>
    <string name="consent">Accepter</string>
    <string name="search_hint">Trouver...</string>
    <string name="user_name">Nom</string>
    <string name="submit">Envoyer</string>
    <string name="create_account">Create Account</string>
    <string name="login_via_acc">Login via account</string>
    <string name="verified_code">Verified Code</string>
    <string name="resend">Resend</string>
    <string name="email_or_user_name">Email or Username</string>
    <string name="toast_time_out">5000</string>
    <string name="splash_time_out">1000</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_exist">This email had exist on our system, please use another email</string>
    <string name="user_name_exist">This username had exist on our system, please use another username</string>
    <string name="invalid_full_name">Invalid FullName, need from 5 to 50 charactes</string>
    <string name="invalid_user_name">Invalid UserName, need from 5 to 50 charactes, accept lower case, digits and "_-" symbols</string>
    <string-array name="drawer_menus">
        <item>On Store</item>
        <item>Annonces - Devis</item>
        <item>Categories</item>
        <item>Boutiques</item>
        
        <item>Fan Page</item>
        <item>A Propos</item>
    </string-array>
    <string-array name="aim_id">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="aim_name">
        <item>Sell</item>
        <item>Buy</item>
    </string-array>
    <string name="domain_url">https://www.prixpascher.ma/</string>
    <string name="categories_json_url">http://www.prixpascher.ma/api/categories_api/</string>
    <string name="county_json_url">http://www.prixpascher.ma/api/county_api/</string>
    <string name="cities_json_url">http://www.prixpascher.ma/api/cities_api/</string>
    <string name="images_json_url">https://www.prixpascher.ma/api/bucket/picture/</string>
    <string name="images_thumb_url">https://www.prixpascher.ma/thumb/</string>
    <string name="products_json_url">https://www.prixpascher.ma/api/products/products/list</string>
    <string name="gallery_post_url">http://www.prixpascher.ma/api/bucket/upload/</string>
    <string name="announces_json_url">https://www.prixpascher.ma/api/announces</string>
    <string name="user_announces_url">https://www.prixpascher.ma/api/announces/mobile/user</string>
    <string name="announce_root_json_url">https://www.prixpascher.ma/annonce/api/annonce/</string>
    <string name="offer_root_json_url">https://www.prixpascher.ma/api/offer/</string>
    <string name="offers_user_json_url">https://www.prixpascher.ma/api/offers/user</string>
    <string name="annonce_offers_json_url">https://www.prixpascher.ma/api/offers/annonce/</string>
    <string name="product_root_json_url">https://www.prixpascher.ma/article/api/products/</string>
    <string name="users_json_url">https://www.prixpascher.ma/api/user/merchant/</string>
    <string name="users_add_url">https://www.prixpascher.ma/api/user</string>
    <string name="shop_json_url">https://www.prixpascher.ma/api/shop</string>
    <string name="merchant_json_url">https://www.prixpascher.ma/api/merchant/</string>
    <string name="announce_send_json_url">https://www.prixpascher.ma/api/annonce/persist/mobile</string>
    <string name="announce_notif_json_url">https://www.prixpascher.ma/api/message/annonce/</string>
    <string name="alert_send_url">https://www.prixpascher.ma/api/products/alert</string>
    <string name="msg_send_url">https://www.prixpascher.ma/api/message/contact</string>
    <string name="review_send_url">https://www.prixpascher.ma/api/review</string>
    <string name="admob_publisher_id">ca-app-pub-1074284300135896~4737246366</string>
    <string name="admob_test_device_ids">TEST_EMULATOR</string>
    <string name="affiliate_admob_unit_id">ca-app-pub-1074284300135896/3880819704</string>
    <string name="public_admob_unit_id">ca-app-pub-1074284300135896/6213979568</string>
    <string name="copyright">Developed by Nuvola</string>
    <string name="loading">Loading...</string>
    <string name="about_us_label">A propos</string>
    <string name="login_label">Login</string>
    <string name="change_pass">Changer votre mot de passe</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New passsword</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="confirm_pass_alert">Password incorrect</string>
    <string name="error_alert">Oups ! Erreur, reessayer et reporter à PrixPasCher Team</string>
    <string name="update_success_label">Mise à jour réussie</string>
    <string name="coming_soon_label">En cours d\'activation... Merci de patienter</string>
    <string name="update_failed_label">Error, please check your password</string>
    <string name="update_profile_failed_label">Error, this phone had exist</string>
    <string name="login_failed">Login failed, please check again</string>
    <string name="fb_login_failed">Login failed, have an user have an account same your email and facebook id you supply in our system</string>
    <string name="verified_code_failed">Your verified code incorrect, please check again</string>
    <string name="verified_code_success">Congrulation!!! you have been create account successfull, please login now !!!</string>
    <string name="password">Password</string>
    <string name="loging">Login, please wait ...</string>
    <string name="result_label">Articles trouvés</string>
    <string name="about_us_content">
    <![CDATA[
   		<center>Copyright &copy; Nuvola Org</center>
   		<center>
   		   2018 - All Rights Reserved.
   		</center>
    ]]>
    </string>
    <string name="update_products">Rafraichir mes produits</string>
    <string name="use_facebook_account">Login via facebook account</string>
    <string name="registering_message">performing autoregistration...</string>
</resources>