<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avt"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dip"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_update"
                    style="@style/icon_button"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_transparent"
                    android:text="@string/edit_label" />


                <Button
                    android:id="@+id/btn_logout"
                    style="@style/icon_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/background_transparent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/logout" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/common_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/user_name"
                style="@style/common_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                app:met_primaryColor="@color/base_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/common_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/display_name"
                    style="@style/common_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    app:met_primaryColor="@color/base_color"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/common_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/email"
                    style="@style/common_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    app:met_primaryColor="@color/base_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/common_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/websites"
                    style="@style/common_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    app:met_primaryColor="@color/base_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/common_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/address"
                    style="@style/common_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    app:met_primaryColor="@color/base_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/common_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feed" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/product_feed"
                    style="@style/common_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    app:met_primaryColor="@color/base_color" />
            </LinearLayout>

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/btn_update_products"
                style="@style/common_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/update_products"
                />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/btn_change_pass"
                style="@style/common_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/change_pass"
                android:textColor="@color/white" />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/btn_show_my_products"
                style="@style/common_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/products" />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/btn_show_my_announces"
                style="@style/common_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/announces" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
