<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" 
    android:background="@drawable/ppp_banner">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo" 
        android:layout_gravity="center_horizontal"/>

    <com.facebook.widget.LoginButton
        android:id="@+id/btnFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        fb:login_text="@string/use_facebook_account" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_login"
        style="@style/common_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/login_via_acc"
        android:textColor="@color/white"
        />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_create_account"
        style="@style/common_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/create_account"
        android:textColor="@color/white" />

</LinearLayout>