<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_splash"
   >

    <RelativeLayout
        android:id="@+id/wrap_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/img_splash_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="Your logo here"
            android:src="@drawable/ic_logo"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_splash_logo"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold"
            >
        </TextView>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright"
        android:textColor="#FFFFFF" />

    <TextView android:text="@string/registering_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/informationTextView"
        android:textColor="#096ad2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>